--- a/backend/VirtualClass.API/appsettings.json
+++ b/backend/VirtualClass.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Connection": "Server=localhost;Database=VirtualClassDataBase;User Id=sa;Password=Senha@123;TrustServerCertificate=True;"
+  }
 }
