--- a/backend/VirtualClass.Application/VirtualClass.Application.csproj
+++ b/backend/VirtualClass.Application/VirtualClass.Application.csproj
@@ -11,4 +11,12 @@
     <ProjectReference Include="..\VirtualClass.Infrastructure\VirtualClass.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
+  </ItemGroup>
+
 </Project>
