config program auth and cqrs

--- a/backend/VirtualClass.API/appsettings.json
+++ b/backend/VirtualClass.API/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Connection": "Server=localhost;Database=VirtualClassDataBase;User Id=sa;Password=Senha@123;TrustServerCertificate=True;"
+  },
+
+  "Jwt": {
+    "Key": "r7B9Lm/Wq4kG2pTz8YvNcR6sU0F5hX1QbZc3nV+oP9y=",
+    "Issuer": "VirtualClass",
+    "Audience": "VirtualClassClient"
   }
 }
