migration confirm email user, service send email

--- a/backend/VirtualClass.API/appsettings.json
+++ b/backend/VirtualClass.API/appsettings.json
@@ -9,10 +9,17 @@
   "ConnectionStrings": {
     "Connection": "Server=localhost;Database=VirtualClassDataBase;User Id=sa;Password=Senha@123;TrustServerCertificate=True;"
   },
-
   "Jwt": {
     "Key": "r7B9Lm/Wq4kG2pTz8YvNcR6sU0F5hX1QbZc3nV+oP9y=",
     "Issuer": "VirtualClass",
     "Audience": "VirtualClassClient"
+  },
+  "Smtp": {
+    "Host": "smtp.gmail.com",
+    "Port": "587",
+    "User": "",
+    "PassWord": "",
+    "FromEmail": "",
+    "FromName": "VirtualClass"
   }
 }
