sending email when register user

--- a/backend/VirtualClass.API/appsettings.json
+++ b/backend/VirtualClass.API/appsettings.json
@@ -21,5 +21,8 @@
     "PassWord": "",
     "FromEmail": "",
     "FromName": "VirtualClass"
-  }
+  },
+  "App": {
+      "ClientUrl": "https://localhost:7200"
+   } 
 }
